@@ -8,12 +8,14 @@ Latest version of the release notes: https://gerrit.wikimedia.org/r/gitweb?p=med
 === Version 0.3 ===
 (dev)
 
-* Improved type hinting
-* Removed static method from IDiff interface since this is not allowed in strict mode
+
 * Improved entry point and setup code. Diff.php is now the main entry point for both MW extension and standalone library
+* ListDiffs with only add operations can now be applied on top of bases that do not have their key
 * Added IDiff::removeEmptyOperations
 * Added constructor tests for MapDiff and ListDiff
 * Added extra tests for Diff and MapDiff
+* Improved type hinting
+* Removed static method from IDiff interface since this is not allowed in strict mode
 
 === Version 0.2 ===
 2012-11-01
